--- a/loss_function_analysis/abandoned/ce.ipynb
+++ b/loss_function_analysis/abandoned/ce.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,29 +36,35 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from focal import FocalLoss\n",
-    "\n",
     "import torchmetrics\n",
+    "import random\n",
     "\n",
     "## Hyperparameters \n",
     "# random seed\n",
     "SEED = 1 \n",
     "NUM_CLASS = 10\n",
+    "def setup_seed(seed):\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    random.seed(seed)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    \n",
+    "setup_seed(SEED)\n",
     "\n",
     "# Training\n",
     "BATCH_SIZE = 128\n",
-    "NUM_EPOCHS = 30\n",
-    "EVAL_INTERVAL=1\n",
-    "SAVE_DIR = './log'\n",
+    "NUM_EPOCHS = 50\n",
+    "EVAL_INTERVAL = 1\n",
     "\n",
     "# Optimizer\n",
     "LEARNING_RATE = 1e-1\n",
     "MOMENTUM = 0.9\n",
-    "STEP=5\n",
-    "GAMMA=0.5\n",
+    "STEP = 5\n",
+    "GAMMA = 0.5\n",
     "\n",
     "## Device\n",
-    "device = torch.device(\"cuda:2\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cuda:5\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "## Dataset\n",
     "# cifar10 transform\n",
@@ -96,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,13 +142,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "####################### Modify here ###########################\n",
     "# Define the loss function\n",
-    "criterion = FocalLoss(gamma=0.5, reduction='mean')\n",
+    "criterion = nn.CrossEntropyLoss()\n",
     "###############################################################\n",
     "\n",
     "## Define the batch train\n",
@@ -193,103 +199,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1/30\n",
+      "Epoch: 1/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0120 Acc: 0.3763 Precision: 0.3964 Recall: 0.3763 f1score_micro: 0.3763 f1score_macro: 0.3617\n",
-      "Epoch: 2/30\n",
+      "Test Loss: 0.0134 Acc: 0.3708 Precision: 0.4317 Recall: 0.3708 f1score_micro: 0.3708 f1score_macro: 0.3542\n",
+      "Epoch: 2/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0121 Acc: 0.3791 Precision: 0.3794 Recall: 0.3791 f1score_micro: 0.3791 f1score_macro: 0.3649\n",
-      "Epoch: 3/30\n",
+      "Test Loss: 0.0133 Acc: 0.3789 Precision: 0.4226 Recall: 0.3789 f1score_micro: 0.3789 f1score_macro: 0.3546\n",
+      "Epoch: 3/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0113 Acc: 0.4188 Precision: 0.4430 Recall: 0.4188 f1score_micro: 0.4188 f1score_macro: 0.4218\n",
-      "Epoch: 4/30\n",
+      "Test Loss: 0.0131 Acc: 0.3982 Precision: 0.3968 Recall: 0.3982 f1score_micro: 0.3982 f1score_macro: 0.3719\n",
+      "Epoch: 4/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0118 Acc: 0.3865 Precision: 0.3967 Recall: 0.3865 f1score_micro: 0.3865 f1score_macro: 0.3613\n",
-      "Epoch: 5/30\n",
+      "Test Loss: 0.0129 Acc: 0.4036 Precision: 0.4304 Recall: 0.4036 f1score_micro: 0.4036 f1score_macro: 0.3790\n",
+      "Epoch: 5/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0118 Acc: 0.3926 Precision: 0.4008 Recall: 0.3926 f1score_micro: 0.3926 f1score_macro: 0.3793\n",
-      "Epoch: 6/30\n",
+      "Test Loss: 0.0127 Acc: 0.4112 Precision: 0.4339 Recall: 0.4112 f1score_micro: 0.4112 f1score_macro: 0.3841\n",
+      "Epoch: 6/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0106 Acc: 0.4581 Precision: 0.4770 Recall: 0.4581 f1score_micro: 0.4581 f1score_macro: 0.4484\n",
-      "Epoch: 7/30\n",
+      "Test Loss: 0.0115 Acc: 0.4779 Precision: 0.4763 Recall: 0.4779 f1score_micro: 0.4779 f1score_macro: 0.4596\n",
+      "Epoch: 7/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0100 Acc: 0.4768 Precision: 0.4787 Recall: 0.4768 f1score_micro: 0.4768 f1score_macro: 0.4657\n",
-      "Epoch: 8/30\n",
+      "Test Loss: 0.0116 Acc: 0.4719 Precision: 0.4823 Recall: 0.4719 f1score_micro: 0.4719 f1score_macro: 0.4649\n",
+      "Epoch: 8/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0105 Acc: 0.4604 Precision: 0.4712 Recall: 0.4604 f1score_micro: 0.4604 f1score_macro: 0.4542\n",
-      "Epoch: 9/30\n",
+      "Test Loss: 0.0112 Acc: 0.4880 Precision: 0.4813 Recall: 0.4880 f1score_micro: 0.4880 f1score_macro: 0.4768\n",
+      "Epoch: 9/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0108 Acc: 0.4499 Precision: 0.4679 Recall: 0.4499 f1score_micro: 0.4499 f1score_macro: 0.4367\n",
-      "Epoch: 10/30\n",
+      "Test Loss: 0.0115 Acc: 0.4601 Precision: 0.4838 Recall: 0.4601 f1score_micro: 0.4601 f1score_macro: 0.4416\n",
+      "Epoch: 10/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0103 Acc: 0.4669 Precision: 0.4908 Recall: 0.4669 f1score_micro: 0.4669 f1score_macro: 0.4593\n",
-      "Epoch: 11/30\n",
+      "Test Loss: 0.0112 Acc: 0.4850 Precision: 0.5015 Recall: 0.4850 f1score_micro: 0.4850 f1score_macro: 0.4775\n",
+      "Epoch: 11/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0094 Acc: 0.5167 Precision: 0.5122 Recall: 0.5167 f1score_micro: 0.5167 f1score_macro: 0.5084\n",
-      "Epoch: 12/30\n",
+      "Test Loss: 0.0107 Acc: 0.5169 Precision: 0.5164 Recall: 0.5169 f1score_micro: 0.5169 f1score_macro: 0.5099\n",
+      "Epoch: 12/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0092 Acc: 0.5267 Precision: 0.5242 Recall: 0.5267 f1score_micro: 0.5267 f1score_macro: 0.5171\n",
-      "Epoch: 13/30\n",
+      "Test Loss: 0.0106 Acc: 0.5172 Precision: 0.5143 Recall: 0.5172 f1score_micro: 0.5172 f1score_macro: 0.5112\n",
+      "Epoch: 13/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0092 Acc: 0.5281 Precision: 0.5259 Recall: 0.5281 f1score_micro: 0.5281 f1score_macro: 0.5197\n",
-      "Epoch: 14/30\n",
+      "Test Loss: 0.0104 Acc: 0.5348 Precision: 0.5326 Recall: 0.5348 f1score_micro: 0.5348 f1score_macro: 0.5303\n",
+      "Epoch: 14/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0092 Acc: 0.5281 Precision: 0.5258 Recall: 0.5281 f1score_micro: 0.5281 f1score_macro: 0.5238\n",
-      "Epoch: 15/30\n",
+      "Test Loss: 0.0105 Acc: 0.5167 Precision: 0.5259 Recall: 0.5167 f1score_micro: 0.5167 f1score_macro: 0.5081\n",
+      "Epoch: 15/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0092 Acc: 0.5294 Precision: 0.5262 Recall: 0.5294 f1score_micro: 0.5294 f1score_macro: 0.5230\n",
-      "Epoch: 16/30\n",
+      "Test Loss: 0.0107 Acc: 0.5180 Precision: 0.5285 Recall: 0.5180 f1score_micro: 0.5180 f1score_macro: 0.5160\n",
+      "Epoch: 16/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0087 Acc: 0.5515 Precision: 0.5458 Recall: 0.5515 f1score_micro: 0.5515 f1score_macro: 0.5463\n",
-      "Epoch: 17/30\n",
+      "Test Loss: 0.0101 Acc: 0.5436 Precision: 0.5446 Recall: 0.5436 f1score_micro: 0.5436 f1score_macro: 0.5400\n",
+      "Epoch: 17/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0087 Acc: 0.5526 Precision: 0.5523 Recall: 0.5526 f1score_micro: 0.5526 f1score_macro: 0.5496\n",
-      "Epoch: 18/30\n",
+      "Test Loss: 0.0100 Acc: 0.5446 Precision: 0.5425 Recall: 0.5446 f1score_micro: 0.5446 f1score_macro: 0.5412\n",
+      "Epoch: 18/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0088 Acc: 0.5475 Precision: 0.5538 Recall: 0.5475 f1score_micro: 0.5475 f1score_macro: 0.5394\n",
-      "Epoch: 19/30\n",
+      "Test Loss: 0.0101 Acc: 0.5431 Precision: 0.5460 Recall: 0.5431 f1score_micro: 0.5431 f1score_macro: 0.5381\n",
+      "Epoch: 19/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0086 Acc: 0.5586 Precision: 0.5596 Recall: 0.5586 f1score_micro: 0.5586 f1score_macro: 0.5573\n",
-      "Epoch: 20/30\n",
+      "Test Loss: 0.0102 Acc: 0.5351 Precision: 0.5418 Recall: 0.5351 f1score_micro: 0.5351 f1score_macro: 0.5300\n",
+      "Epoch: 20/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0087 Acc: 0.5522 Precision: 0.5496 Recall: 0.5522 f1score_micro: 0.5522 f1score_macro: 0.5454\n",
-      "Epoch: 21/30\n",
+      "Test Loss: 0.0099 Acc: 0.5537 Precision: 0.5502 Recall: 0.5537 f1score_micro: 0.5537 f1score_macro: 0.5482\n",
+      "Epoch: 21/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0084 Acc: 0.5643 Precision: 0.5623 Recall: 0.5643 f1score_micro: 0.5643 f1score_macro: 0.5594\n",
-      "Epoch: 22/30\n",
+      "Test Loss: 0.0098 Acc: 0.5585 Precision: 0.5565 Recall: 0.5585 f1score_micro: 0.5585 f1score_macro: 0.5555\n",
+      "Epoch: 22/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0085 Acc: 0.5615 Precision: 0.5592 Recall: 0.5615 f1score_micro: 0.5615 f1score_macro: 0.5563\n",
-      "Epoch: 23/30\n",
+      "Test Loss: 0.0097 Acc: 0.5587 Precision: 0.5541 Recall: 0.5587 f1score_micro: 0.5587 f1score_macro: 0.5549\n",
+      "Epoch: 23/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0085 Acc: 0.5644 Precision: 0.5629 Recall: 0.5644 f1score_micro: 0.5644 f1score_macro: 0.5595\n",
-      "Epoch: 24/30\n",
+      "Test Loss: 0.0098 Acc: 0.5533 Precision: 0.5494 Recall: 0.5533 f1score_micro: 0.5533 f1score_macro: 0.5486\n",
+      "Epoch: 24/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0084 Acc: 0.5702 Precision: 0.5699 Recall: 0.5702 f1score_micro: 0.5702 f1score_macro: 0.5678\n",
-      "Epoch: 25/30\n",
+      "Test Loss: 0.0097 Acc: 0.5607 Precision: 0.5618 Recall: 0.5607 f1score_micro: 0.5607 f1score_macro: 0.5586\n",
+      "Epoch: 25/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0085 Acc: 0.5587 Precision: 0.5610 Recall: 0.5587 f1score_micro: 0.5587 f1score_macro: 0.5549\n",
-      "Epoch: 26/30\n",
+      "Test Loss: 0.0099 Acc: 0.5509 Precision: 0.5479 Recall: 0.5509 f1score_micro: 0.5509 f1score_macro: 0.5418\n",
+      "Epoch: 26/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0083 Acc: 0.5754 Precision: 0.5694 Recall: 0.5754 f1score_micro: 0.5754 f1score_macro: 0.5705\n",
-      "Epoch: 27/30\n",
+      "Test Loss: 0.0097 Acc: 0.5578 Precision: 0.5566 Recall: 0.5578 f1score_micro: 0.5578 f1score_macro: 0.5551\n",
+      "Epoch: 27/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0083 Acc: 0.5717 Precision: 0.5668 Recall: 0.5717 f1score_micro: 0.5717 f1score_macro: 0.5663\n",
-      "Epoch: 28/30\n",
+      "Test Loss: 0.0096 Acc: 0.5630 Precision: 0.5629 Recall: 0.5630 f1score_micro: 0.5630 f1score_macro: 0.5621\n",
+      "Epoch: 28/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0082 Acc: 0.5768 Precision: 0.5731 Recall: 0.5768 f1score_micro: 0.5768 f1score_macro: 0.5732\n",
-      "Epoch: 29/30\n",
+      "Test Loss: 0.0096 Acc: 0.5655 Precision: 0.5619 Recall: 0.5655 f1score_micro: 0.5655 f1score_macro: 0.5617\n",
+      "Epoch: 29/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0082 Acc: 0.5806 Precision: 0.5772 Recall: 0.5806 f1score_micro: 0.5806 f1score_macro: 0.5774\n",
-      "Epoch: 30/30\n",
+      "Test Loss: 0.0096 Acc: 0.5611 Precision: 0.5577 Recall: 0.5611 f1score_micro: 0.5611 f1score_macro: 0.5560\n",
+      "Epoch: 30/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0082 Acc: 0.5768 Precision: 0.5748 Recall: 0.5768 f1score_micro: 0.5768 f1score_macro: 0.5729\n"
+      "Test Loss: 0.0095 Acc: 0.5654 Precision: 0.5610 Recall: 0.5654 f1score_micro: 0.5654 f1score_macro: 0.5603\n",
+      "Epoch: 31/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0095 Acc: 0.5691 Precision: 0.5667 Recall: 0.5691 f1score_micro: 0.5691 f1score_macro: 0.5665\n",
+      "Epoch: 32/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0095 Acc: 0.5692 Precision: 0.5665 Recall: 0.5692 f1score_micro: 0.5692 f1score_macro: 0.5654\n",
+      "Epoch: 33/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0095 Acc: 0.5662 Precision: 0.5639 Recall: 0.5662 f1score_micro: 0.5662 f1score_macro: 0.5634\n",
+      "Epoch: 34/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0095 Acc: 0.5703 Precision: 0.5662 Recall: 0.5703 f1score_micro: 0.5703 f1score_macro: 0.5650\n",
+      "Epoch: 35/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0095 Acc: 0.5688 Precision: 0.5638 Recall: 0.5688 f1score_micro: 0.5688 f1score_macro: 0.5638\n",
+      "Epoch: 36/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5724 Precision: 0.5684 Recall: 0.5724 f1score_micro: 0.5724 f1score_macro: 0.5692\n",
+      "Epoch: 37/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5711 Precision: 0.5665 Recall: 0.5711 f1score_micro: 0.5711 f1score_macro: 0.5677\n",
+      "Epoch: 38/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5688 Precision: 0.5637 Recall: 0.5688 f1score_micro: 0.5688 f1score_macro: 0.5633\n",
+      "Epoch: 39/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5715 Precision: 0.5669 Recall: 0.5715 f1score_micro: 0.5715 f1score_macro: 0.5664\n",
+      "Epoch: 40/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5699 Precision: 0.5640 Recall: 0.5699 f1score_micro: 0.5699 f1score_macro: 0.5648\n",
+      "Epoch: 41/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5685 Precision: 0.5638 Recall: 0.5685 f1score_micro: 0.5685 f1score_macro: 0.5643\n",
+      "Epoch: 42/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5677 Precision: 0.5627 Recall: 0.5677 f1score_micro: 0.5677 f1score_macro: 0.5633\n",
+      "Epoch: 43/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5723 Precision: 0.5669 Recall: 0.5723 f1score_micro: 0.5723 f1score_macro: 0.5682\n",
+      "Epoch: 44/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5712 Precision: 0.5684 Recall: 0.5712 f1score_micro: 0.5712 f1score_macro: 0.5677\n",
+      "Epoch: 45/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5711 Precision: 0.5658 Recall: 0.5711 f1score_micro: 0.5711 f1score_macro: 0.5669\n",
+      "Epoch: 46/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5729 Precision: 0.5685 Recall: 0.5729 f1score_micro: 0.5729 f1score_macro: 0.5693\n",
+      "Epoch: 47/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5732 Precision: 0.5681 Recall: 0.5732 f1score_micro: 0.5732 f1score_macro: 0.5691\n",
+      "Epoch: 48/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5728 Precision: 0.5692 Recall: 0.5728 f1score_micro: 0.5728 f1score_macro: 0.5695\n",
+      "Epoch: 49/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5727 Precision: 0.5673 Recall: 0.5727 f1score_micro: 0.5727 f1score_macro: 0.5687\n",
+      "Epoch: 50/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0094 Acc: 0.5733 Precision: 0.5686 Recall: 0.5733 f1score_micro: 0.5733 f1score_macro: 0.5696\n"
      ]
     }
    ],
@@ -310,7 +376,7 @@
     "\n",
     "for epoch in range(NUM_EPOCHS):\n",
     "    model.train()\n",
-    "    torch.cuda.empty_cache()\n",
+    "    # torch.cuda.empty_cache()\n",
     "\n",
     "    ##########################\n",
     "    ### Training\n",
@@ -388,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +467,7 @@
    ],
    "source": [
     "df = pd.DataFrame({'acc': test_acc_l, 'precision': test_precision_l, 'recall': test_recall_l, 'f1score_micro': test_f1score_micro_l, 'f1score_macro': test_f1score_macro_l})\n",
-    "df.to_csv('./log/focal_0.5.csv', index=False)\n",
+    "df.to_csv('./log/ce.csv', index=False)\n",
     "print('log generated')"
    ]
   }
