--- a/loss_function_analysis/abandoned/focal_2.ipynb
+++ b/loss_function_analysis/abandoned/focal_2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
     }
    ],
    "source": [
-    "## Basic imports\n",
+    "# Basic imports\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -36,29 +36,43 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import torchmetrics\n",
+    "from focal import FocalLoss\n",
     "\n",
-    "## Hyperparameters \n",
+    "import torchmetrics\n",
+    "import random\n",
+    "\n",
+    "# Hyperparameters\n",
     "# random seed\n",
-    "SEED = 1 \n",
+    "SEED = 1\n",
     "NUM_CLASS = 10\n",
+    "\n",
+    "\n",
+    "def setup_seed(seed):\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    random.seed(seed)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "\n",
+    "\n",
+    "setup_seed(SEED)\n",
     "\n",
     "# Training\n",
     "BATCH_SIZE = 128\n",
-    "NUM_EPOCHS = 30\n",
-    "EVAL_INTERVAL=1\n",
+    "NUM_EPOCHS = 50\n",
+    "EVAL_INTERVAL = 1\n",
     "SAVE_DIR = './log'\n",
     "\n",
     "# Optimizer\n",
     "LEARNING_RATE = 1e-1\n",
     "MOMENTUM = 0.9\n",
-    "STEP=5\n",
-    "GAMMA=0.5\n",
+    "STEP = 5\n",
+    "GAMMA = 0.5\n",
     "\n",
-    "## Device\n",
-    "device = torch.device(\"cuda:5\" if torch.cuda.is_available() else \"cpu\")\n",
+    "# Device\n",
+    "device = torch.device(\"cuda:4\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "## Dataset\n",
+    "# Dataset\n",
     "# cifar10 transform\n",
     "transform_cifar10_train = transforms.Compose([\n",
     "    transforms.RandomCrop(32, padding=4),\n",
@@ -73,16 +87,17 @@
     "])\n",
     "\n",
     "train_set = torchvision.datasets.CIFAR10(root='../../data', train=True,\n",
-    "                                        download=True, transform=transform_cifar10_train)\n",
+    "                                         download=True, transform=transform_cifar10_train)\n",
     "train_dataloader = torch.utils.data.DataLoader(train_set, batch_size=BATCH_SIZE,\n",
-    "                                          shuffle=True, num_workers=2)\n",
+    "                                               shuffle=True, num_workers=2)\n",
     "\n",
     "test_set = torchvision.datasets.CIFAR10(root='../../data', train=False,\n",
-    "                                       download=True, transform=transform_cifar10_test)\n",
+    "                                        download=True, transform=transform_cifar10_test)\n",
     "test_dataloader = torch.utils.data.DataLoader(test_set, batch_size=BATCH_SIZE,\n",
-    "                                         shuffle=False, num_workers=2)\n",
+    "                                              shuffle=False, num_workers=2)\n",
     "\n",
-    "class_names = ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n"
+    "class_names = ['airplane', 'automobile', 'bird', 'cat',\n",
+    "               'deer', 'dog', 'frog', 'horse', 'ship', 'truck']"
    ]
   },
   {
@@ -94,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,13 +149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "####################### Modify here ###########################\n",
     "# Define the loss function\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "criterion = FocalLoss(gamma=2, reduction='mean')\n",
     "###############################################################\n",
     "\n",
     "## Define the batch train\n",
@@ -191,103 +206,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1/30\n",
+      "Epoch: 1/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0157 Acc: 0.2968 Precision: 0.3229 Recall: 0.2968 f1score_micro: 0.2968 f1score_macro: 0.2609\n",
-      "Epoch: 2/30\n",
+      "Test Loss: 0.0092 Acc: 0.3717 Precision: 0.4012 Recall: 0.3717 f1score_micro: 0.3717 f1score_macro: 0.3581\n",
+      "Epoch: 2/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0133 Acc: 0.3766 Precision: 0.3725 Recall: 0.3766 f1score_micro: 0.3766 f1score_macro: 0.3502\n",
-      "Epoch: 3/30\n",
+      "Test Loss: 0.0094 Acc: 0.3705 Precision: 0.3885 Recall: 0.3705 f1score_micro: 0.3705 f1score_macro: 0.3590\n",
+      "Epoch: 3/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0134 Acc: 0.3753 Precision: 0.3833 Recall: 0.3753 f1score_micro: 0.3753 f1score_macro: 0.3554\n",
-      "Epoch: 4/30\n",
+      "Test Loss: 0.0089 Acc: 0.4003 Precision: 0.4048 Recall: 0.4003 f1score_micro: 0.4003 f1score_macro: 0.3890\n",
+      "Epoch: 4/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0127 Acc: 0.4092 Precision: 0.4284 Recall: 0.4092 f1score_micro: 0.4092 f1score_macro: 0.3936\n",
-      "Epoch: 5/30\n",
+      "Test Loss: 0.0090 Acc: 0.3788 Precision: 0.4288 Recall: 0.3788 f1score_micro: 0.3788 f1score_macro: 0.3765\n",
+      "Epoch: 5/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0127 Acc: 0.4187 Precision: 0.4255 Recall: 0.4187 f1score_micro: 0.4187 f1score_macro: 0.4042\n",
-      "Epoch: 6/30\n",
+      "Test Loss: 0.0087 Acc: 0.4092 Precision: 0.4013 Recall: 0.4092 f1score_micro: 0.4092 f1score_macro: 0.3911\n",
+      "Epoch: 6/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0113 Acc: 0.4711 Precision: 0.4740 Recall: 0.4711 f1score_micro: 0.4711 f1score_macro: 0.4597\n",
-      "Epoch: 7/30\n",
+      "Test Loss: 0.0083 Acc: 0.4354 Precision: 0.4460 Recall: 0.4354 f1score_micro: 0.4354 f1score_macro: 0.4224\n",
+      "Epoch: 7/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0114 Acc: 0.4764 Precision: 0.4813 Recall: 0.4764 f1score_micro: 0.4764 f1score_macro: 0.4680\n",
-      "Epoch: 8/30\n",
+      "Test Loss: 0.0077 Acc: 0.4476 Precision: 0.4663 Recall: 0.4476 f1score_micro: 0.4476 f1score_macro: 0.4470\n",
+      "Epoch: 8/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0113 Acc: 0.4781 Precision: 0.4908 Recall: 0.4781 f1score_micro: 0.4781 f1score_macro: 0.4738\n",
-      "Epoch: 9/30\n",
+      "Test Loss: 0.0077 Acc: 0.4595 Precision: 0.4588 Recall: 0.4595 f1score_micro: 0.4595 f1score_macro: 0.4483\n",
+      "Epoch: 9/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0111 Acc: 0.4896 Precision: 0.4983 Recall: 0.4896 f1score_micro: 0.4896 f1score_macro: 0.4796\n",
-      "Epoch: 10/30\n",
+      "Test Loss: 0.0077 Acc: 0.4459 Precision: 0.4843 Recall: 0.4459 f1score_micro: 0.4459 f1score_macro: 0.4214\n",
+      "Epoch: 10/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0110 Acc: 0.5004 Precision: 0.5012 Recall: 0.5004 f1score_micro: 0.5004 f1score_macro: 0.4956\n",
-      "Epoch: 11/30\n",
+      "Test Loss: 0.0075 Acc: 0.4738 Precision: 0.4969 Recall: 0.4738 f1score_micro: 0.4738 f1score_macro: 0.4693\n",
+      "Epoch: 11/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0106 Acc: 0.5157 Precision: 0.5122 Recall: 0.5157 f1score_micro: 0.5157 f1score_macro: 0.5071\n",
-      "Epoch: 12/30\n",
+      "Test Loss: 0.0070 Acc: 0.5039 Precision: 0.5168 Recall: 0.5039 f1score_micro: 0.5039 f1score_macro: 0.4965\n",
+      "Epoch: 12/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0107 Acc: 0.5170 Precision: 0.5175 Recall: 0.5170 f1score_micro: 0.5170 f1score_macro: 0.5056\n",
-      "Epoch: 13/30\n",
+      "Test Loss: 0.0069 Acc: 0.5100 Precision: 0.5245 Recall: 0.5100 f1score_micro: 0.5100 f1score_macro: 0.5084\n",
+      "Epoch: 13/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0104 Acc: 0.5210 Precision: 0.5226 Recall: 0.5210 f1score_micro: 0.5210 f1score_macro: 0.5174\n",
-      "Epoch: 14/30\n",
+      "Test Loss: 0.0067 Acc: 0.5197 Precision: 0.5235 Recall: 0.5197 f1score_micro: 0.5197 f1score_macro: 0.5142\n",
+      "Epoch: 14/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0103 Acc: 0.5317 Precision: 0.5461 Recall: 0.5317 f1score_micro: 0.5317 f1score_macro: 0.5345\n",
-      "Epoch: 15/30\n",
+      "Test Loss: 0.0070 Acc: 0.5046 Precision: 0.5164 Recall: 0.5046 f1score_micro: 0.5046 f1score_macro: 0.4967\n",
+      "Epoch: 15/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0105 Acc: 0.5241 Precision: 0.5325 Recall: 0.5241 f1score_micro: 0.5241 f1score_macro: 0.5223\n",
-      "Epoch: 16/30\n",
+      "Test Loss: 0.0067 Acc: 0.5241 Precision: 0.5395 Recall: 0.5241 f1score_micro: 0.5241 f1score_macro: 0.5230\n",
+      "Epoch: 16/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0099 Acc: 0.5560 Precision: 0.5571 Recall: 0.5560 f1score_micro: 0.5560 f1score_macro: 0.5483\n",
-      "Epoch: 17/30\n",
+      "Test Loss: 0.0065 Acc: 0.5298 Precision: 0.5395 Recall: 0.5298 f1score_micro: 0.5298 f1score_macro: 0.5267\n",
+      "Epoch: 17/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0100 Acc: 0.5468 Precision: 0.5541 Recall: 0.5468 f1score_micro: 0.5468 f1score_macro: 0.5422\n",
-      "Epoch: 18/30\n",
+      "Test Loss: 0.0063 Acc: 0.5472 Precision: 0.5501 Recall: 0.5472 f1score_micro: 0.5472 f1score_macro: 0.5470\n",
+      "Epoch: 18/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0097 Acc: 0.5623 Precision: 0.5611 Recall: 0.5623 f1score_micro: 0.5623 f1score_macro: 0.5582\n",
-      "Epoch: 19/30\n",
+      "Test Loss: 0.0063 Acc: 0.5422 Precision: 0.5481 Recall: 0.5422 f1score_micro: 0.5422 f1score_macro: 0.5400\n",
+      "Epoch: 19/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0099 Acc: 0.5491 Precision: 0.5624 Recall: 0.5491 f1score_micro: 0.5491 f1score_macro: 0.5473\n",
-      "Epoch: 20/30\n",
+      "Test Loss: 0.0063 Acc: 0.5455 Precision: 0.5491 Recall: 0.5455 f1score_micro: 0.5455 f1score_macro: 0.5425\n",
+      "Epoch: 20/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0098 Acc: 0.5493 Precision: 0.5554 Recall: 0.5493 f1score_micro: 0.5493 f1score_macro: 0.5420\n",
-      "Epoch: 21/30\n",
+      "Test Loss: 0.0063 Acc: 0.5439 Precision: 0.5467 Recall: 0.5439 f1score_micro: 0.5439 f1score_macro: 0.5402\n",
+      "Epoch: 21/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0095 Acc: 0.5729 Precision: 0.5723 Recall: 0.5729 f1score_micro: 0.5729 f1score_macro: 0.5662\n",
-      "Epoch: 22/30\n",
+      "Test Loss: 0.0061 Acc: 0.5534 Precision: 0.5569 Recall: 0.5534 f1score_micro: 0.5534 f1score_macro: 0.5520\n",
+      "Epoch: 22/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0094 Acc: 0.5786 Precision: 0.5746 Recall: 0.5786 f1score_micro: 0.5786 f1score_macro: 0.5726\n",
-      "Epoch: 23/30\n",
+      "Test Loss: 0.0061 Acc: 0.5597 Precision: 0.5622 Recall: 0.5597 f1score_micro: 0.5597 f1score_macro: 0.5560\n",
+      "Epoch: 23/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0094 Acc: 0.5755 Precision: 0.5733 Recall: 0.5755 f1score_micro: 0.5755 f1score_macro: 0.5702\n",
-      "Epoch: 24/30\n",
+      "Test Loss: 0.0061 Acc: 0.5604 Precision: 0.5583 Recall: 0.5604 f1score_micro: 0.5604 f1score_macro: 0.5582\n",
+      "Epoch: 24/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0094 Acc: 0.5720 Precision: 0.5747 Recall: 0.5720 f1score_micro: 0.5720 f1score_macro: 0.5682\n",
-      "Epoch: 25/30\n",
+      "Test Loss: 0.0061 Acc: 0.5541 Precision: 0.5534 Recall: 0.5541 f1score_micro: 0.5541 f1score_macro: 0.5497\n",
+      "Epoch: 25/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0095 Acc: 0.5679 Precision: 0.5713 Recall: 0.5679 f1score_micro: 0.5679 f1score_macro: 0.5660\n",
-      "Epoch: 26/30\n",
+      "Test Loss: 0.0062 Acc: 0.5505 Precision: 0.5513 Recall: 0.5505 f1score_micro: 0.5505 f1score_macro: 0.5463\n",
+      "Epoch: 26/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0092 Acc: 0.5848 Precision: 0.5828 Recall: 0.5848 f1score_micro: 0.5848 f1score_macro: 0.5807\n",
-      "Epoch: 27/30\n",
+      "Test Loss: 0.0060 Acc: 0.5598 Precision: 0.5600 Recall: 0.5598 f1score_micro: 0.5598 f1score_macro: 0.5585\n",
+      "Epoch: 27/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0092 Acc: 0.5864 Precision: 0.5851 Recall: 0.5864 f1score_micro: 0.5864 f1score_macro: 0.5829\n",
-      "Epoch: 28/30\n",
+      "Test Loss: 0.0059 Acc: 0.5650 Precision: 0.5629 Recall: 0.5650 f1score_micro: 0.5650 f1score_macro: 0.5627\n",
+      "Epoch: 28/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0093 Acc: 0.5826 Precision: 0.5823 Recall: 0.5826 f1score_micro: 0.5826 f1score_macro: 0.5795\n",
-      "Epoch: 29/30\n",
+      "Test Loss: 0.0059 Acc: 0.5628 Precision: 0.5600 Recall: 0.5628 f1score_micro: 0.5628 f1score_macro: 0.5591\n",
+      "Epoch: 29/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0093 Acc: 0.5777 Precision: 0.5815 Recall: 0.5777 f1score_micro: 0.5777 f1score_macro: 0.5768\n",
-      "Epoch: 30/30\n",
+      "Test Loss: 0.0059 Acc: 0.5637 Precision: 0.5635 Recall: 0.5637 f1score_micro: 0.5637 f1score_macro: 0.5611\n",
+      "Epoch: 30/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0091 Acc: 0.5878 Precision: 0.5845 Recall: 0.5878 f1score_micro: 0.5878 f1score_macro: 0.5852\n"
+      "Test Loss: 0.0059 Acc: 0.5682 Precision: 0.5680 Recall: 0.5682 f1score_micro: 0.5682 f1score_macro: 0.5655\n",
+      "Epoch: 31/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0059 Acc: 0.5638 Precision: 0.5643 Recall: 0.5638 f1score_micro: 0.5638 f1score_macro: 0.5625\n",
+      "Epoch: 32/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0059 Acc: 0.5673 Precision: 0.5670 Recall: 0.5673 f1score_micro: 0.5673 f1score_macro: 0.5656\n",
+      "Epoch: 33/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5677 Precision: 0.5674 Recall: 0.5677 f1score_micro: 0.5677 f1score_macro: 0.5660\n",
+      "Epoch: 34/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5669 Precision: 0.5665 Recall: 0.5669 f1score_micro: 0.5669 f1score_macro: 0.5636\n",
+      "Epoch: 35/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0059 Acc: 0.5732 Precision: 0.5703 Recall: 0.5732 f1score_micro: 0.5732 f1score_macro: 0.5704\n",
+      "Epoch: 36/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5667 Precision: 0.5651 Recall: 0.5667 f1score_micro: 0.5667 f1score_macro: 0.5652\n",
+      "Epoch: 37/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5707 Precision: 0.5683 Recall: 0.5707 f1score_micro: 0.5707 f1score_macro: 0.5683\n",
+      "Epoch: 38/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0059 Acc: 0.5710 Precision: 0.5688 Recall: 0.5710 f1score_micro: 0.5710 f1score_macro: 0.5677\n",
+      "Epoch: 39/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5725 Precision: 0.5699 Recall: 0.5725 f1score_micro: 0.5725 f1score_macro: 0.5690\n",
+      "Epoch: 40/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5694 Precision: 0.5662 Recall: 0.5694 f1score_micro: 0.5694 f1score_macro: 0.5663\n",
+      "Epoch: 41/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5699 Precision: 0.5672 Recall: 0.5699 f1score_micro: 0.5699 f1score_macro: 0.5676\n",
+      "Epoch: 42/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5711 Precision: 0.5672 Recall: 0.5711 f1score_micro: 0.5711 f1score_macro: 0.5681\n",
+      "Epoch: 43/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5711 Precision: 0.5682 Recall: 0.5711 f1score_micro: 0.5711 f1score_macro: 0.5689\n",
+      "Epoch: 44/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5688 Precision: 0.5686 Recall: 0.5688 f1score_micro: 0.5688 f1score_macro: 0.5671\n",
+      "Epoch: 45/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5706 Precision: 0.5680 Recall: 0.5706 f1score_micro: 0.5706 f1score_macro: 0.5678\n",
+      "Epoch: 46/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5736 Precision: 0.5713 Recall: 0.5736 f1score_micro: 0.5736 f1score_macro: 0.5716\n",
+      "Epoch: 47/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5726 Precision: 0.5701 Recall: 0.5726 f1score_micro: 0.5726 f1score_macro: 0.5705\n",
+      "Epoch: 48/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5725 Precision: 0.5699 Recall: 0.5725 f1score_micro: 0.5725 f1score_macro: 0.5702\n",
+      "Epoch: 49/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5736 Precision: 0.5711 Recall: 0.5736 f1score_micro: 0.5736 f1score_macro: 0.5718\n",
+      "Epoch: 50/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0058 Acc: 0.5737 Precision: 0.5697 Recall: 0.5737 f1score_micro: 0.5737 f1score_macro: 0.5708\n"
      ]
     }
    ],
@@ -308,7 +383,7 @@
     "\n",
     "for epoch in range(NUM_EPOCHS):\n",
     "    model.train()\n",
-    "    torch.cuda.empty_cache()\n",
+    "    # torch.cuda.empty_cache()\n",
     "\n",
     "    ##########################\n",
     "    ### Training\n",
@@ -386,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +474,7 @@
    ],
    "source": [
     "df = pd.DataFrame({'acc': test_acc_l, 'precision': test_precision_l, 'recall': test_recall_l, 'f1score_micro': test_f1score_micro_l, 'f1score_macro': test_f1score_macro_l})\n",
-    "df.to_csv('./log/ce.csv', index=False)\n",
+    "df.to_csv('./log/focal_2.csv', index=False)\n",
     "print('log generated')"
    ]
   }
