--- a/loss_function_analysis/abandoned/mae.ipynb
+++ b/loss_function_analysis/abandoned/mae.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,15 +37,24 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import torchmetrics\n",
+    "import random\n",
     "\n",
     "## Hyperparameters \n",
     "# random seed\n",
     "SEED = 1 \n",
     "NUM_CLASS = 10\n",
+    "def setup_seed(seed):\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    random.seed(seed)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    \n",
+    "setup_seed(SEED)\n",
     "\n",
     "# Training\n",
     "BATCH_SIZE = 128\n",
-    "NUM_EPOCHS = 30\n",
+    "NUM_EPOCHS = 50\n",
     "EVAL_INTERVAL=1\n",
     "SAVE_DIR = './log'\n",
     "\n",
@@ -94,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,9 +190,8 @@
     "    \"\"\"\n",
     "\n",
     "    ####################### Modify here ###########################\n",
-    "    with torch.no_grad():\n",
-    "        output = model(image)\n",
-    "        loss = criterion(F.softmax(output, dim=1), F.one_hot(target, num_classes=10))\n",
+    "    output = model(image)\n",
+    "    loss = criterion(F.softmax(output, dim=1), F.one_hot(target, num_classes=10))\n",
     "    ###############################################################\n",
     "\n",
     "    return output, loss"
@@ -191,103 +199,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1/30\n",
+      "Epoch: 1/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0013 Acc: 0.1707 Precision: 0.0848 Recall: 0.1707 f1score_micro: 0.1707 f1score_macro: 0.0780\n",
-      "Epoch: 2/30\n",
+      "Test Loss: 0.0012 Acc: 0.2373 Precision: 0.1460 Recall: 0.2373 f1score_micro: 0.2373 f1score_macro: 0.1788\n",
+      "Epoch: 2/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0012 Acc: 0.2119 Precision: 0.1266 Recall: 0.2119 f1score_micro: 0.2119 f1score_macro: 0.1444\n",
-      "Epoch: 3/30\n",
+      "Test Loss: 0.0012 Acc: 0.2603 Precision: 0.2198 Recall: 0.2603 f1score_micro: 0.2603 f1score_macro: 0.2016\n",
+      "Epoch: 3/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0012 Acc: 0.2362 Precision: 0.1505 Recall: 0.2362 f1score_micro: 0.2362 f1score_macro: 0.1684\n",
-      "Epoch: 4/30\n",
+      "Test Loss: 0.0011 Acc: 0.3173 Precision: 0.2428 Recall: 0.3173 f1score_micro: 0.3173 f1score_macro: 0.2578\n",
+      "Epoch: 4/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0012 Acc: 0.2422 Precision: 0.1413 Recall: 0.2422 f1score_micro: 0.2422 f1score_macro: 0.1705\n",
-      "Epoch: 5/30\n",
+      "Test Loss: 0.0011 Acc: 0.3243 Precision: 0.2606 Recall: 0.3243 f1score_micro: 0.3243 f1score_macro: 0.2819\n",
+      "Epoch: 5/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0012 Acc: 0.2597 Precision: 0.1427 Recall: 0.2597 f1score_micro: 0.2597 f1score_macro: 0.1776\n",
-      "Epoch: 6/30\n",
+      "Test Loss: 0.0010 Acc: 0.3364 Precision: 0.2757 Recall: 0.3364 f1score_micro: 0.3364 f1score_macro: 0.2810\n",
+      "Epoch: 6/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0012 Acc: 0.2730 Precision: 0.1517 Recall: 0.2730 f1score_micro: 0.2730 f1score_macro: 0.1890\n",
-      "Epoch: 7/30\n",
+      "Test Loss: 0.0010 Acc: 0.3484 Precision: 0.2870 Recall: 0.3484 f1score_micro: 0.3484 f1score_macro: 0.2918\n",
+      "Epoch: 7/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0012 Acc: 0.2679 Precision: 0.1623 Recall: 0.2679 f1score_micro: 0.2679 f1score_macro: 0.1896\n",
-      "Epoch: 8/30\n",
+      "Test Loss: 0.0010 Acc: 0.3519 Precision: 0.2918 Recall: 0.3519 f1score_micro: 0.3519 f1score_macro: 0.3029\n",
+      "Epoch: 8/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.2798 Precision: 0.1484 Recall: 0.2798 f1score_micro: 0.2798 f1score_macro: 0.1902\n",
-      "Epoch: 9/30\n",
+      "Test Loss: 0.0010 Acc: 0.3702 Precision: 0.3072 Recall: 0.3702 f1score_micro: 0.3702 f1score_macro: 0.3188\n",
+      "Epoch: 9/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.2771 Precision: 0.1570 Recall: 0.2771 f1score_micro: 0.2771 f1score_macro: 0.1903\n",
-      "Epoch: 10/30\n",
+      "Test Loss: 0.0010 Acc: 0.3882 Precision: 0.3143 Recall: 0.3882 f1score_micro: 0.3882 f1score_macro: 0.3374\n",
+      "Epoch: 10/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.2894 Precision: 0.1523 Recall: 0.2894 f1score_micro: 0.2894 f1score_macro: 0.1973\n",
-      "Epoch: 11/30\n",
+      "Test Loss: 0.0009 Acc: 0.4104 Precision: 0.3337 Recall: 0.4104 f1score_micro: 0.4104 f1score_macro: 0.3586\n",
+      "Epoch: 11/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.2983 Precision: 0.1632 Recall: 0.2983 f1score_micro: 0.2983 f1score_macro: 0.2046\n",
-      "Epoch: 12/30\n",
+      "Test Loss: 0.0009 Acc: 0.4136 Precision: 0.3344 Recall: 0.4136 f1score_micro: 0.4136 f1score_macro: 0.3634\n",
+      "Epoch: 12/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3041 Precision: 0.1673 Recall: 0.3041 f1score_micro: 0.3041 f1score_macro: 0.2095\n",
-      "Epoch: 13/30\n",
+      "Test Loss: 0.0009 Acc: 0.4199 Precision: 0.3499 Recall: 0.4199 f1score_micro: 0.4199 f1score_macro: 0.3642\n",
+      "Epoch: 13/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.2993 Precision: 0.1659 Recall: 0.2993 f1score_micro: 0.2993 f1score_macro: 0.2069\n",
-      "Epoch: 14/30\n",
+      "Test Loss: 0.0009 Acc: 0.4204 Precision: 0.3502 Recall: 0.4204 f1score_micro: 0.4204 f1score_macro: 0.3654\n",
+      "Epoch: 14/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3078 Precision: 0.1721 Recall: 0.3078 f1score_micro: 0.3078 f1score_macro: 0.2114\n",
-      "Epoch: 15/30\n",
+      "Test Loss: 0.0009 Acc: 0.4275 Precision: 0.3546 Recall: 0.4275 f1score_micro: 0.4275 f1score_macro: 0.3808\n",
+      "Epoch: 15/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3112 Precision: 0.1729 Recall: 0.3112 f1score_micro: 0.3112 f1score_macro: 0.2138\n",
-      "Epoch: 16/30\n",
+      "Test Loss: 0.0009 Acc: 0.4301 Precision: 0.3565 Recall: 0.4301 f1score_micro: 0.4301 f1score_macro: 0.3800\n",
+      "Epoch: 16/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3090 Precision: 0.1707 Recall: 0.3090 f1score_micro: 0.3090 f1score_macro: 0.2125\n",
-      "Epoch: 17/30\n",
+      "Test Loss: 0.0009 Acc: 0.4371 Precision: 0.3557 Recall: 0.4371 f1score_micro: 0.4371 f1score_macro: 0.3825\n",
+      "Epoch: 17/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3147 Precision: 0.1777 Recall: 0.3147 f1score_micro: 0.3147 f1score_macro: 0.2176\n",
-      "Epoch: 18/30\n",
+      "Test Loss: 0.0009 Acc: 0.4391 Precision: 0.3580 Recall: 0.4391 f1score_micro: 0.4391 f1score_macro: 0.3860\n",
+      "Epoch: 18/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3117 Precision: 0.1685 Recall: 0.3117 f1score_micro: 0.3117 f1score_macro: 0.2133\n",
-      "Epoch: 19/30\n",
+      "Test Loss: 0.0009 Acc: 0.4457 Precision: 0.3605 Recall: 0.4457 f1score_micro: 0.4457 f1score_macro: 0.3922\n",
+      "Epoch: 19/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3123 Precision: 0.1716 Recall: 0.3123 f1score_micro: 0.3123 f1score_macro: 0.2148\n",
-      "Epoch: 20/30\n",
+      "Test Loss: 0.0009 Acc: 0.4472 Precision: 0.3574 Recall: 0.4472 f1score_micro: 0.4472 f1score_macro: 0.3943\n",
+      "Epoch: 20/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3157 Precision: 0.1754 Recall: 0.3157 f1score_micro: 0.3157 f1score_macro: 0.2178\n",
-      "Epoch: 21/30\n",
+      "Test Loss: 0.0009 Acc: 0.4413 Precision: 0.3583 Recall: 0.4413 f1score_micro: 0.4413 f1score_macro: 0.3856\n",
+      "Epoch: 21/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3188 Precision: 0.1724 Recall: 0.3188 f1score_micro: 0.3188 f1score_macro: 0.2192\n",
-      "Epoch: 22/30\n",
+      "Test Loss: 0.0009 Acc: 0.4487 Precision: 0.3673 Recall: 0.4487 f1score_micro: 0.4487 f1score_macro: 0.3953\n",
+      "Epoch: 22/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3187 Precision: 0.1722 Recall: 0.3187 f1score_micro: 0.3187 f1score_macro: 0.2187\n",
-      "Epoch: 23/30\n",
+      "Test Loss: 0.0009 Acc: 0.4497 Precision: 0.3667 Recall: 0.4497 f1score_micro: 0.4497 f1score_macro: 0.3980\n",
+      "Epoch: 23/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3191 Precision: 0.1763 Recall: 0.3191 f1score_micro: 0.3191 f1score_macro: 0.2201\n",
-      "Epoch: 24/30\n",
+      "Test Loss: 0.0009 Acc: 0.4496 Precision: 0.3684 Recall: 0.4496 f1score_micro: 0.4496 f1score_macro: 0.3974\n",
+      "Epoch: 24/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3171 Precision: 0.1736 Recall: 0.3171 f1score_micro: 0.3171 f1score_macro: 0.2181\n",
-      "Epoch: 25/30\n",
+      "Test Loss: 0.0009 Acc: 0.4539 Precision: 0.3666 Recall: 0.4539 f1score_micro: 0.4539 f1score_macro: 0.4003\n",
+      "Epoch: 25/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3196 Precision: 0.1800 Recall: 0.3196 f1score_micro: 0.3196 f1score_macro: 0.2218\n",
-      "Epoch: 26/30\n",
+      "Test Loss: 0.0009 Acc: 0.4528 Precision: 0.3670 Recall: 0.4528 f1score_micro: 0.4528 f1score_macro: 0.3991\n",
+      "Epoch: 26/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3194 Precision: 0.1726 Recall: 0.3194 f1score_micro: 0.3194 f1score_macro: 0.2192\n",
-      "Epoch: 27/30\n",
+      "Test Loss: 0.0009 Acc: 0.4545 Precision: 0.3672 Recall: 0.4545 f1score_micro: 0.4545 f1score_macro: 0.3992\n",
+      "Epoch: 27/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3194 Precision: 0.1773 Recall: 0.3194 f1score_micro: 0.3194 f1score_macro: 0.2207\n",
-      "Epoch: 28/30\n",
+      "Test Loss: 0.0009 Acc: 0.4550 Precision: 0.3700 Recall: 0.4550 f1score_micro: 0.4550 f1score_macro: 0.3995\n",
+      "Epoch: 28/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3203 Precision: 0.1750 Recall: 0.3203 f1score_micro: 0.3203 f1score_macro: 0.2206\n",
-      "Epoch: 29/30\n",
+      "Test Loss: 0.0009 Acc: 0.4582 Precision: 0.3706 Recall: 0.4582 f1score_micro: 0.4582 f1score_macro: 0.4023\n",
+      "Epoch: 29/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3200 Precision: 0.1726 Recall: 0.3200 f1score_micro: 0.3200 f1score_macro: 0.2193\n",
-      "Epoch: 30/30\n",
+      "Test Loss: 0.0009 Acc: 0.4563 Precision: 0.3687 Recall: 0.4563 f1score_micro: 0.4563 f1score_macro: 0.4013\n",
+      "Epoch: 30/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3195 Precision: 0.1736 Recall: 0.3195 f1score_micro: 0.3195 f1score_macro: 0.2194\n"
+      "Test Loss: 0.0009 Acc: 0.4585 Precision: 0.3726 Recall: 0.4585 f1score_micro: 0.4585 f1score_macro: 0.4024\n",
+      "Epoch: 31/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4571 Precision: 0.3711 Recall: 0.4571 f1score_micro: 0.4571 f1score_macro: 0.4016\n",
+      "Epoch: 32/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4585 Precision: 0.3726 Recall: 0.4585 f1score_micro: 0.4585 f1score_macro: 0.4040\n",
+      "Epoch: 33/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4573 Precision: 0.3710 Recall: 0.4573 f1score_micro: 0.4573 f1score_macro: 0.4021\n",
+      "Epoch: 34/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4582 Precision: 0.3700 Recall: 0.4582 f1score_micro: 0.4582 f1score_macro: 0.4027\n",
+      "Epoch: 35/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4591 Precision: 0.3702 Recall: 0.4591 f1score_micro: 0.4591 f1score_macro: 0.4044\n",
+      "Epoch: 36/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4601 Precision: 0.3728 Recall: 0.4601 f1score_micro: 0.4601 f1score_macro: 0.4047\n",
+      "Epoch: 37/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4596 Precision: 0.3717 Recall: 0.4596 f1score_micro: 0.4596 f1score_macro: 0.4044\n",
+      "Epoch: 38/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4596 Precision: 0.3739 Recall: 0.4596 f1score_micro: 0.4596 f1score_macro: 0.4047\n",
+      "Epoch: 39/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4594 Precision: 0.3725 Recall: 0.4594 f1score_micro: 0.4594 f1score_macro: 0.4057\n",
+      "Epoch: 40/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4592 Precision: 0.3710 Recall: 0.4592 f1score_micro: 0.4592 f1score_macro: 0.4044\n",
+      "Epoch: 41/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4602 Precision: 0.3737 Recall: 0.4602 f1score_micro: 0.4602 f1score_macro: 0.4062\n",
+      "Epoch: 42/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4601 Precision: 0.3720 Recall: 0.4601 f1score_micro: 0.4601 f1score_macro: 0.4054\n",
+      "Epoch: 43/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4606 Precision: 0.3731 Recall: 0.4606 f1score_micro: 0.4606 f1score_macro: 0.4061\n",
+      "Epoch: 44/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4595 Precision: 0.3727 Recall: 0.4595 f1score_micro: 0.4595 f1score_macro: 0.4051\n",
+      "Epoch: 45/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4598 Precision: 0.3731 Recall: 0.4598 f1score_micro: 0.4598 f1score_macro: 0.4050\n",
+      "Epoch: 46/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4601 Precision: 0.3729 Recall: 0.4601 f1score_micro: 0.4601 f1score_macro: 0.4056\n",
+      "Epoch: 47/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4605 Precision: 0.3729 Recall: 0.4605 f1score_micro: 0.4605 f1score_macro: 0.4061\n",
+      "Epoch: 48/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4607 Precision: 0.3729 Recall: 0.4607 f1score_micro: 0.4607 f1score_macro: 0.4060\n",
+      "Epoch: 49/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4601 Precision: 0.3729 Recall: 0.4601 f1score_micro: 0.4601 f1score_macro: 0.4055\n",
+      "Epoch: 50/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0009 Acc: 0.4596 Precision: 0.3726 Recall: 0.4596 f1score_micro: 0.4596 f1score_macro: 0.4052\n"
      ]
     }
    ],
@@ -308,7 +376,7 @@
     "\n",
     "for epoch in range(NUM_EPOCHS):\n",
     "    model.train()\n",
-    "    torch.cuda.empty_cache()\n",
+    "    # torch.cuda.empty_cache()\n",
     "\n",
     "    ##########################\n",
     "    ### Training\n",
@@ -385,53 +453,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exploratory Invetigation"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(6    5000\n",
-       " 9    5000\n",
-       " 4    5000\n",
-       " 1    5000\n",
-       " 2    5000\n",
-       " 7    5000\n",
-       " 8    5000\n",
-       " 3    5000\n",
-       " 5    5000\n",
-       " 0    5000\n",
-       " dtype: int64,\n",
-       " 3    1000\n",
-       " 8    1000\n",
-       " 0    1000\n",
-       " 6    1000\n",
-       " 1    1000\n",
-       " 9    1000\n",
-       " 5    1000\n",
-       " 7    1000\n",
-       " 4    1000\n",
-       " 2    1000\n",
-       " dtype: int64)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "log generated\n"
+     ]
     }
    ],
    "source": [
-    "train_targets = pd.Series(train_set.targets)\n",
-    "test_targets = pd.Series(test_set.targets)\n",
-    "train_targets.value_counts(), test_targets.value_counts()"
+    "df = pd.DataFrame({'acc': test_acc_l, 'precision': test_precision_l, 'recall': test_recall_l, 'f1score_micro': test_f1score_micro_l, 'f1score_macro': test_f1score_macro_l})\n",
+    "df.to_csv('./log/mae.csv', index=False)\n",
+    "print('log generated')"
    ]
   }
  ],
