--- a/loss_function_analysis/abandoned/templete.ipynb
+++ b/loss_function_analysis/abandoned/templete.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +42,8 @@
     "# random seed\n",
     "SEED = 1 \n",
     "NUM_CLASS = 10\n",
+    "torch.manual_seed(SEED)\n",
+    "torch.cuda.manual_seed_all(SEED)\n",
     "\n",
     "# Training\n",
     "BATCH_SIZE = 128\n",
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -200,94 +202,94 @@
      "text": [
       "Epoch: 1/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0013 Acc: 0.1601 Precision: 0.0797 Recall: 0.1601 f1score_micro: 0.1601 f1score_macro: 0.0598\n",
+      "Test Loss: 0.0013 Acc: 0.1707 Precision: 0.0848 Recall: 0.1707 f1score_micro: 0.1707 f1score_macro: 0.0780\n",
       "Epoch: 2/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0012 Acc: 0.2593 Precision: 0.1573 Recall: 0.2593 f1score_micro: 0.2593 f1score_macro: 0.1783\n",
+      "Test Loss: 0.0012 Acc: 0.2119 Precision: 0.1266 Recall: 0.2119 f1score_micro: 0.2119 f1score_macro: 0.1444\n",
       "Epoch: 3/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0012 Acc: 0.2672 Precision: 0.1471 Recall: 0.2672 f1score_micro: 0.2672 f1score_macro: 0.1850\n",
+      "Test Loss: 0.0012 Acc: 0.2362 Precision: 0.1505 Recall: 0.2362 f1score_micro: 0.2362 f1score_macro: 0.1684\n",
       "Epoch: 4/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.2756 Precision: 0.1609 Recall: 0.2756 f1score_micro: 0.2756 f1score_macro: 0.1948\n",
+      "Test Loss: 0.0012 Acc: 0.2422 Precision: 0.1413 Recall: 0.2422 f1score_micro: 0.2422 f1score_macro: 0.1705\n",
       "Epoch: 5/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.2933 Precision: 0.1618 Recall: 0.2933 f1score_micro: 0.2933 f1score_macro: 0.2001\n",
+      "Test Loss: 0.0012 Acc: 0.2597 Precision: 0.1427 Recall: 0.2597 f1score_micro: 0.2597 f1score_macro: 0.1776\n",
       "Epoch: 6/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.2987 Precision: 0.1539 Recall: 0.2987 f1score_micro: 0.2987 f1score_macro: 0.2003\n",
+      "Test Loss: 0.0012 Acc: 0.2730 Precision: 0.1517 Recall: 0.2730 f1score_micro: 0.2730 f1score_macro: 0.1890\n",
       "Epoch: 7/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3023 Precision: 0.1700 Recall: 0.3023 f1score_micro: 0.3023 f1score_macro: 0.2083\n",
+      "Test Loss: 0.0012 Acc: 0.2679 Precision: 0.1623 Recall: 0.2679 f1score_micro: 0.2679 f1score_macro: 0.1896\n",
       "Epoch: 8/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3111 Precision: 0.1696 Recall: 0.3111 f1score_micro: 0.3111 f1score_macro: 0.2131\n",
+      "Test Loss: 0.0011 Acc: 0.2798 Precision: 0.1484 Recall: 0.2798 f1score_micro: 0.2798 f1score_macro: 0.1902\n",
       "Epoch: 9/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3023 Precision: 0.1655 Recall: 0.3023 f1score_micro: 0.3023 f1score_macro: 0.2071\n",
+      "Test Loss: 0.0011 Acc: 0.2771 Precision: 0.1570 Recall: 0.2771 f1score_micro: 0.2771 f1score_macro: 0.1903\n",
       "Epoch: 10/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3207 Precision: 0.1761 Recall: 0.3207 f1score_micro: 0.3207 f1score_macro: 0.2204\n",
+      "Test Loss: 0.0011 Acc: 0.2894 Precision: 0.1523 Recall: 0.2894 f1score_micro: 0.2894 f1score_macro: 0.1973\n",
       "Epoch: 11/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3263 Precision: 0.1884 Recall: 0.3263 f1score_micro: 0.3263 f1score_macro: 0.2277\n",
+      "Test Loss: 0.0011 Acc: 0.2983 Precision: 0.1632 Recall: 0.2983 f1score_micro: 0.2983 f1score_macro: 0.2046\n",
       "Epoch: 12/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3245 Precision: 0.1707 Recall: 0.3245 f1score_micro: 0.3245 f1score_macro: 0.2197\n",
+      "Test Loss: 0.0011 Acc: 0.3041 Precision: 0.1673 Recall: 0.3041 f1score_micro: 0.3041 f1score_macro: 0.2095\n",
       "Epoch: 13/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3328 Precision: 0.1838 Recall: 0.3328 f1score_micro: 0.3328 f1score_macro: 0.2288\n",
+      "Test Loss: 0.0011 Acc: 0.2993 Precision: 0.1659 Recall: 0.2993 f1score_micro: 0.2993 f1score_macro: 0.2069\n",
       "Epoch: 14/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0011 Acc: 0.3301 Precision: 0.1894 Recall: 0.3301 f1score_micro: 0.3301 f1score_macro: 0.2291\n",
+      "Test Loss: 0.0011 Acc: 0.3078 Precision: 0.1721 Recall: 0.3078 f1score_micro: 0.3078 f1score_macro: 0.2114\n",
       "Epoch: 15/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3392 Precision: 0.1800 Recall: 0.3392 f1score_micro: 0.3392 f1score_macro: 0.2302\n",
+      "Test Loss: 0.0011 Acc: 0.3112 Precision: 0.1729 Recall: 0.3112 f1score_micro: 0.3112 f1score_macro: 0.2138\n",
       "Epoch: 16/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3450 Precision: 0.1846 Recall: 0.3450 f1score_micro: 0.3450 f1score_macro: 0.2351\n",
+      "Test Loss: 0.0011 Acc: 0.3090 Precision: 0.1707 Recall: 0.3090 f1score_micro: 0.3090 f1score_macro: 0.2125\n",
       "Epoch: 17/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3427 Precision: 0.1885 Recall: 0.3427 f1score_micro: 0.3427 f1score_macro: 0.2351\n",
+      "Test Loss: 0.0011 Acc: 0.3147 Precision: 0.1777 Recall: 0.3147 f1score_micro: 0.3147 f1score_macro: 0.2176\n",
       "Epoch: 18/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3492 Precision: 0.1862 Recall: 0.3492 f1score_micro: 0.3492 f1score_macro: 0.2374\n",
+      "Test Loss: 0.0011 Acc: 0.3117 Precision: 0.1685 Recall: 0.3117 f1score_micro: 0.3117 f1score_macro: 0.2133\n",
       "Epoch: 19/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3513 Precision: 0.1936 Recall: 0.3513 f1score_micro: 0.3513 f1score_macro: 0.2413\n",
+      "Test Loss: 0.0011 Acc: 0.3123 Precision: 0.1716 Recall: 0.3123 f1score_micro: 0.3123 f1score_macro: 0.2148\n",
       "Epoch: 20/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3481 Precision: 0.1902 Recall: 0.3481 f1score_micro: 0.3481 f1score_macro: 0.2383\n",
+      "Test Loss: 0.0011 Acc: 0.3157 Precision: 0.1754 Recall: 0.3157 f1score_micro: 0.3157 f1score_macro: 0.2178\n",
       "Epoch: 21/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3520 Precision: 0.1912 Recall: 0.3520 f1score_micro: 0.3520 f1score_macro: 0.2407\n",
+      "Test Loss: 0.0011 Acc: 0.3188 Precision: 0.1724 Recall: 0.3188 f1score_micro: 0.3188 f1score_macro: 0.2192\n",
       "Epoch: 22/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3527 Precision: 0.1938 Recall: 0.3527 f1score_micro: 0.3527 f1score_macro: 0.2424\n",
+      "Test Loss: 0.0011 Acc: 0.3187 Precision: 0.1722 Recall: 0.3187 f1score_micro: 0.3187 f1score_macro: 0.2187\n",
       "Epoch: 23/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3529 Precision: 0.1943 Recall: 0.3529 f1score_micro: 0.3529 f1score_macro: 0.2423\n",
+      "Test Loss: 0.0011 Acc: 0.3191 Precision: 0.1763 Recall: 0.3191 f1score_micro: 0.3191 f1score_macro: 0.2201\n",
       "Epoch: 24/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3533 Precision: 0.1855 Recall: 0.3533 f1score_micro: 0.3533 f1score_macro: 0.2394\n",
+      "Test Loss: 0.0011 Acc: 0.3171 Precision: 0.1736 Recall: 0.3171 f1score_micro: 0.3171 f1score_macro: 0.2181\n",
       "Epoch: 25/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3564 Precision: 0.1963 Recall: 0.3564 f1score_micro: 0.3564 f1score_macro: 0.2450\n",
+      "Test Loss: 0.0011 Acc: 0.3196 Precision: 0.1800 Recall: 0.3196 f1score_micro: 0.3196 f1score_macro: 0.2218\n",
       "Epoch: 26/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3560 Precision: 0.1925 Recall: 0.3560 f1score_micro: 0.3560 f1score_macro: 0.2438\n",
+      "Test Loss: 0.0011 Acc: 0.3194 Precision: 0.1726 Recall: 0.3194 f1score_micro: 0.3194 f1score_macro: 0.2192\n",
       "Epoch: 27/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3569 Precision: 0.1934 Recall: 0.3569 f1score_micro: 0.3569 f1score_macro: 0.2440\n",
+      "Test Loss: 0.0011 Acc: 0.3194 Precision: 0.1773 Recall: 0.3194 f1score_micro: 0.3194 f1score_macro: 0.2207\n",
       "Epoch: 28/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3563 Precision: 0.1905 Recall: 0.3563 f1score_micro: 0.3563 f1score_macro: 0.2428\n",
+      "Test Loss: 0.0011 Acc: 0.3203 Precision: 0.1750 Recall: 0.3203 f1score_micro: 0.3203 f1score_macro: 0.2206\n",
       "Epoch: 29/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3569 Precision: 0.1959 Recall: 0.3569 f1score_micro: 0.3569 f1score_macro: 0.2452\n",
+      "Test Loss: 0.0011 Acc: 0.3200 Precision: 0.1726 Recall: 0.3200 f1score_micro: 0.3200 f1score_macro: 0.2193\n",
       "Epoch: 30/30\n",
       "Begin test......\n",
-      "Test Loss: 0.0010 Acc: 0.3553 Precision: 0.1896 Recall: 0.3553 f1score_micro: 0.3553 f1score_macro: 0.2420\n"
+      "Test Loss: 0.0011 Acc: 0.3195 Precision: 0.1736 Recall: 0.3195 f1score_micro: 0.3195 f1score_macro: 0.2194\n"
      ]
     }
    ],
@@ -385,22 +387,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploratory Invetigation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "log generated\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(6    5000\n",
+       " 9    5000\n",
+       " 4    5000\n",
+       " 1    5000\n",
+       " 2    5000\n",
+       " 7    5000\n",
+       " 8    5000\n",
+       " 3    5000\n",
+       " 5    5000\n",
+       " 0    5000\n",
+       " dtype: int64,\n",
+       " 3    1000\n",
+       " 8    1000\n",
+       " 0    1000\n",
+       " 6    1000\n",
+       " 1    1000\n",
+       " 9    1000\n",
+       " 5    1000\n",
+       " 7    1000\n",
+       " 4    1000\n",
+       " 2    1000\n",
+       " dtype: int64)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame({'acc': test_acc_l, 'precision': test_precision_l, 'recall': test_recall_l, 'f1score_micro': test_f1score_micro_l, 'f1score_macro': test_f1score_macro_l})\n",
-    "df.to_csv('./log/mae.csv', index=False)\n",
-    "print('log generated')"
+    "train_targets = pd.Series(train_set.targets)\n",
+    "test_targets = pd.Series(test_set.targets)\n",
+    "train_targets.value_counts(), test_targets.value_counts()"
    ]
   }
  ],
