--- a/loss_function_analysis/abandoned/focal_0.5.ipynb
+++ b/loss_function_analysis/abandoned/focal_0.5.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,15 +39,24 @@
     "from focal import FocalLoss\n",
     "\n",
     "import torchmetrics\n",
+    "import random\n",
     "\n",
     "## Hyperparameters \n",
     "# random seed\n",
     "SEED = 1 \n",
     "NUM_CLASS = 10\n",
+    "def setup_seed(seed):\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    random.seed(seed)\n",
+    "    torch.backends.cudnn.detestic = True\n",
+    "    \n",
+    "setup_seed(SEED)\n",
     "\n",
     "# Training\n",
     "BATCH_SIZE = 128\n",
-    "NUM_EPOCHS = 30\n",
+    "NUM_EPOCHS = 50\n",
     "EVAL_INTERVAL=1\n",
     "SAVE_DIR = './log'\n",
     "\n",
@@ -58,7 +67,7 @@
     "GAMMA=0.5\n",
     "\n",
     "## Device\n",
-    "device = torch.device(\"cuda:4\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cuda:2\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "## Dataset\n",
     "# cifar10 transform\n",
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,13 +145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "####################### Modify here ###########################\n",
     "# Define the loss function\n",
-    "criterion = FocalLoss(gamma=2, reduction='mean')\n",
+    "criterion = FocalLoss(gamma=0.5, reduction='mean')\n",
     "###############################################################\n",
     "\n",
     "## Define the batch train\n",
@@ -193,103 +202,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1/30\n",
+      "Epoch: 1/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0099 Acc: 0.3351 Precision: 0.3762 Recall: 0.3351 f1score_micro: 0.3351 f1score_macro: 0.3224\n",
-      "Epoch: 2/30\n",
+      "Test Loss: 0.0118 Acc: 0.3877 Precision: 0.4152 Recall: 0.3877 f1score_micro: 0.3877 f1score_macro: 0.3779\n",
+      "Epoch: 2/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0093 Acc: 0.3808 Precision: 0.4261 Recall: 0.3808 f1score_micro: 0.3808 f1score_macro: 0.3621\n",
-      "Epoch: 3/30\n",
+      "Test Loss: 0.0121 Acc: 0.3662 Precision: 0.3955 Recall: 0.3662 f1score_micro: 0.3662 f1score_macro: 0.3361\n",
+      "Epoch: 3/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0088 Acc: 0.4095 Precision: 0.4265 Recall: 0.4095 f1score_micro: 0.4095 f1score_macro: 0.4128\n",
-      "Epoch: 4/30\n",
+      "Test Loss: 0.0113 Acc: 0.4155 Precision: 0.4169 Recall: 0.4155 f1score_micro: 0.4155 f1score_macro: 0.3978\n",
+      "Epoch: 4/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0086 Acc: 0.4206 Precision: 0.4168 Recall: 0.4206 f1score_micro: 0.4206 f1score_macro: 0.4048\n",
-      "Epoch: 5/30\n",
+      "Test Loss: 0.0118 Acc: 0.3878 Precision: 0.4248 Recall: 0.3878 f1score_micro: 0.3878 f1score_macro: 0.3713\n",
+      "Epoch: 5/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0089 Acc: 0.4033 Precision: 0.4190 Recall: 0.4033 f1score_micro: 0.4033 f1score_macro: 0.4046\n",
-      "Epoch: 6/30\n",
+      "Test Loss: 0.0121 Acc: 0.3857 Precision: 0.3969 Recall: 0.3857 f1score_micro: 0.3857 f1score_macro: 0.3795\n",
+      "Epoch: 6/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0078 Acc: 0.4622 Precision: 0.4616 Recall: 0.4622 f1score_micro: 0.4622 f1score_macro: 0.4521\n",
-      "Epoch: 7/30\n",
+      "Test Loss: 0.0105 Acc: 0.4594 Precision: 0.4605 Recall: 0.4594 f1score_micro: 0.4594 f1score_macro: 0.4452\n",
+      "Epoch: 7/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0077 Acc: 0.4603 Precision: 0.4686 Recall: 0.4603 f1score_micro: 0.4603 f1score_macro: 0.4465\n",
-      "Epoch: 8/30\n",
+      "Test Loss: 0.0109 Acc: 0.4395 Precision: 0.4648 Recall: 0.4395 f1score_micro: 0.4395 f1score_macro: 0.4406\n",
+      "Epoch: 8/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0078 Acc: 0.4507 Precision: 0.4609 Recall: 0.4507 f1score_micro: 0.4507 f1score_macro: 0.4479\n",
-      "Epoch: 9/30\n",
+      "Test Loss: 0.0101 Acc: 0.4762 Precision: 0.4794 Recall: 0.4762 f1score_micro: 0.4762 f1score_macro: 0.4629\n",
+      "Epoch: 9/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0077 Acc: 0.4590 Precision: 0.4769 Recall: 0.4590 f1score_micro: 0.4590 f1score_macro: 0.4350\n",
-      "Epoch: 10/30\n",
+      "Test Loss: 0.0105 Acc: 0.4559 Precision: 0.4893 Recall: 0.4559 f1score_micro: 0.4559 f1score_macro: 0.4392\n",
+      "Epoch: 10/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0075 Acc: 0.4757 Precision: 0.4921 Recall: 0.4757 f1score_micro: 0.4757 f1score_macro: 0.4638\n",
-      "Epoch: 11/30\n",
+      "Test Loss: 0.0106 Acc: 0.4551 Precision: 0.4645 Recall: 0.4551 f1score_micro: 0.4551 f1score_macro: 0.4531\n",
+      "Epoch: 11/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0072 Acc: 0.4873 Precision: 0.4963 Recall: 0.4873 f1score_micro: 0.4873 f1score_macro: 0.4763\n",
-      "Epoch: 12/30\n",
+      "Test Loss: 0.0099 Acc: 0.4871 Precision: 0.4954 Recall: 0.4871 f1score_micro: 0.4871 f1score_macro: 0.4812\n",
+      "Epoch: 12/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0070 Acc: 0.5058 Precision: 0.5165 Recall: 0.5058 f1score_micro: 0.5058 f1score_macro: 0.5023\n",
-      "Epoch: 13/30\n",
+      "Test Loss: 0.0095 Acc: 0.5088 Precision: 0.5148 Recall: 0.5088 f1score_micro: 0.5088 f1score_macro: 0.5060\n",
+      "Epoch: 13/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0070 Acc: 0.5057 Precision: 0.5088 Recall: 0.5057 f1score_micro: 0.5057 f1score_macro: 0.4944\n",
-      "Epoch: 14/30\n",
+      "Test Loss: 0.0097 Acc: 0.5082 Precision: 0.5157 Recall: 0.5082 f1score_micro: 0.5082 f1score_macro: 0.4994\n",
+      "Epoch: 14/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0068 Acc: 0.5174 Precision: 0.5190 Recall: 0.5174 f1score_micro: 0.5174 f1score_macro: 0.5161\n",
-      "Epoch: 15/30\n",
+      "Test Loss: 0.0096 Acc: 0.5077 Precision: 0.5169 Recall: 0.5077 f1score_micro: 0.5077 f1score_macro: 0.4996\n",
+      "Epoch: 15/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0069 Acc: 0.5112 Precision: 0.5212 Recall: 0.5112 f1score_micro: 0.5112 f1score_macro: 0.5027\n",
-      "Epoch: 16/30\n",
+      "Test Loss: 0.0094 Acc: 0.5180 Precision: 0.5231 Recall: 0.5180 f1score_micro: 0.5180 f1score_macro: 0.5166\n",
+      "Epoch: 16/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0066 Acc: 0.5340 Precision: 0.5371 Recall: 0.5340 f1score_micro: 0.5340 f1score_macro: 0.5309\n",
-      "Epoch: 17/30\n",
+      "Test Loss: 0.0091 Acc: 0.5260 Precision: 0.5321 Recall: 0.5260 f1score_micro: 0.5260 f1score_macro: 0.5209\n",
+      "Epoch: 17/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0066 Acc: 0.5234 Precision: 0.5274 Recall: 0.5234 f1score_micro: 0.5234 f1score_macro: 0.5209\n",
-      "Epoch: 18/30\n",
+      "Test Loss: 0.0090 Acc: 0.5412 Precision: 0.5413 Recall: 0.5412 f1score_micro: 0.5412 f1score_macro: 0.5380\n",
+      "Epoch: 18/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0066 Acc: 0.5242 Precision: 0.5281 Recall: 0.5242 f1score_micro: 0.5242 f1score_macro: 0.5194\n",
-      "Epoch: 19/30\n",
+      "Test Loss: 0.0090 Acc: 0.5373 Precision: 0.5383 Recall: 0.5373 f1score_micro: 0.5373 f1score_macro: 0.5347\n",
+      "Epoch: 19/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0065 Acc: 0.5353 Precision: 0.5364 Recall: 0.5353 f1score_micro: 0.5353 f1score_macro: 0.5306\n",
-      "Epoch: 20/30\n",
+      "Test Loss: 0.0091 Acc: 0.5314 Precision: 0.5368 Recall: 0.5314 f1score_micro: 0.5314 f1score_macro: 0.5280\n",
+      "Epoch: 20/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0065 Acc: 0.5270 Precision: 0.5396 Recall: 0.5270 f1score_micro: 0.5270 f1score_macro: 0.5239\n",
-      "Epoch: 21/30\n",
+      "Test Loss: 0.0091 Acc: 0.5282 Precision: 0.5363 Recall: 0.5282 f1score_micro: 0.5282 f1score_macro: 0.5269\n",
+      "Epoch: 21/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0064 Acc: 0.5381 Precision: 0.5426 Recall: 0.5381 f1score_micro: 0.5381 f1score_macro: 0.5367\n",
-      "Epoch: 22/30\n",
+      "Test Loss: 0.0088 Acc: 0.5504 Precision: 0.5506 Recall: 0.5504 f1score_micro: 0.5504 f1score_macro: 0.5478\n",
+      "Epoch: 22/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0064 Acc: 0.5390 Precision: 0.5492 Recall: 0.5390 f1score_micro: 0.5390 f1score_macro: 0.5382\n",
-      "Epoch: 23/30\n",
+      "Test Loss: 0.0088 Acc: 0.5445 Precision: 0.5490 Recall: 0.5445 f1score_micro: 0.5445 f1score_macro: 0.5383\n",
+      "Epoch: 23/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0064 Acc: 0.5434 Precision: 0.5401 Recall: 0.5434 f1score_micro: 0.5434 f1score_macro: 0.5382\n",
-      "Epoch: 24/30\n",
+      "Test Loss: 0.0088 Acc: 0.5463 Precision: 0.5460 Recall: 0.5463 f1score_micro: 0.5463 f1score_macro: 0.5412\n",
+      "Epoch: 24/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0063 Acc: 0.5408 Precision: 0.5400 Recall: 0.5408 f1score_micro: 0.5408 f1score_macro: 0.5365\n",
-      "Epoch: 25/30\n",
+      "Test Loss: 0.0087 Acc: 0.5484 Precision: 0.5530 Recall: 0.5484 f1score_micro: 0.5484 f1score_macro: 0.5471\n",
+      "Epoch: 25/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0063 Acc: 0.5396 Precision: 0.5425 Recall: 0.5396 f1score_micro: 0.5396 f1score_macro: 0.5367\n",
-      "Epoch: 26/30\n",
+      "Test Loss: 0.0090 Acc: 0.5413 Precision: 0.5465 Recall: 0.5413 f1score_micro: 0.5413 f1score_macro: 0.5370\n",
+      "Epoch: 26/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0062 Acc: 0.5477 Precision: 0.5487 Recall: 0.5477 f1score_micro: 0.5477 f1score_macro: 0.5469\n",
-      "Epoch: 27/30\n",
+      "Test Loss: 0.0087 Acc: 0.5513 Precision: 0.5525 Recall: 0.5513 f1score_micro: 0.5513 f1score_macro: 0.5502\n",
+      "Epoch: 27/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0061 Acc: 0.5479 Precision: 0.5455 Recall: 0.5479 f1score_micro: 0.5479 f1score_macro: 0.5458\n",
-      "Epoch: 28/30\n",
+      "Test Loss: 0.0085 Acc: 0.5552 Precision: 0.5555 Recall: 0.5552 f1score_micro: 0.5552 f1score_macro: 0.5522\n",
+      "Epoch: 28/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0062 Acc: 0.5487 Precision: 0.5465 Recall: 0.5487 f1score_micro: 0.5487 f1score_macro: 0.5467\n",
-      "Epoch: 29/30\n",
+      "Test Loss: 0.0085 Acc: 0.5563 Precision: 0.5527 Recall: 0.5563 f1score_micro: 0.5563 f1score_macro: 0.5525\n",
+      "Epoch: 29/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0062 Acc: 0.5535 Precision: 0.5487 Recall: 0.5535 f1score_micro: 0.5535 f1score_macro: 0.5491\n",
-      "Epoch: 30/30\n",
+      "Test Loss: 0.0085 Acc: 0.5535 Precision: 0.5526 Recall: 0.5535 f1score_micro: 0.5535 f1score_macro: 0.5493\n",
+      "Epoch: 30/50\n",
       "Begin test......\n",
-      "Test Loss: 0.0062 Acc: 0.5517 Precision: 0.5519 Recall: 0.5517 f1score_micro: 0.5517 f1score_macro: 0.5496\n"
+      "Test Loss: 0.0085 Acc: 0.5622 Precision: 0.5624 Recall: 0.5622 f1score_micro: 0.5622 f1score_macro: 0.5591\n",
+      "Epoch: 31/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0085 Acc: 0.5621 Precision: 0.5609 Recall: 0.5621 f1score_micro: 0.5621 f1score_macro: 0.5591\n",
+      "Epoch: 32/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0085 Acc: 0.5624 Precision: 0.5595 Recall: 0.5624 f1score_micro: 0.5624 f1score_macro: 0.5591\n",
+      "Epoch: 33/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0085 Acc: 0.5612 Precision: 0.5604 Recall: 0.5612 f1score_micro: 0.5612 f1score_macro: 0.5586\n",
+      "Epoch: 34/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0085 Acc: 0.5596 Precision: 0.5584 Recall: 0.5596 f1score_micro: 0.5596 f1score_macro: 0.5562\n",
+      "Epoch: 35/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0085 Acc: 0.5629 Precision: 0.5579 Recall: 0.5629 f1score_micro: 0.5629 f1score_macro: 0.5584\n",
+      "Epoch: 36/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0084 Acc: 0.5635 Precision: 0.5603 Recall: 0.5635 f1score_micro: 0.5635 f1score_macro: 0.5602\n",
+      "Epoch: 37/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0084 Acc: 0.5625 Precision: 0.5588 Recall: 0.5625 f1score_micro: 0.5625 f1score_macro: 0.5590\n",
+      "Epoch: 38/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0085 Acc: 0.5652 Precision: 0.5615 Recall: 0.5652 f1score_micro: 0.5652 f1score_macro: 0.5608\n",
+      "Epoch: 39/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0084 Acc: 0.5643 Precision: 0.5599 Recall: 0.5643 f1score_micro: 0.5643 f1score_macro: 0.5595\n",
+      "Epoch: 40/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0084 Acc: 0.5607 Precision: 0.5566 Recall: 0.5607 f1score_micro: 0.5607 f1score_macro: 0.5559\n",
+      "Epoch: 41/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0084 Acc: 0.5635 Precision: 0.5611 Recall: 0.5635 f1score_micro: 0.5635 f1score_macro: 0.5605\n",
+      "Epoch: 42/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0084 Acc: 0.5637 Precision: 0.5600 Recall: 0.5637 f1score_micro: 0.5637 f1score_macro: 0.5598\n",
+      "Epoch: 43/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0084 Acc: 0.5646 Precision: 0.5604 Recall: 0.5646 f1score_micro: 0.5646 f1score_macro: 0.5609\n",
+      "Epoch: 44/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0084 Acc: 0.5656 Precision: 0.5637 Recall: 0.5656 f1score_micro: 0.5656 f1score_macro: 0.5619\n",
+      "Epoch: 45/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0084 Acc: 0.5643 Precision: 0.5608 Recall: 0.5643 f1score_micro: 0.5643 f1score_macro: 0.5608\n",
+      "Epoch: 46/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0084 Acc: 0.5659 Precision: 0.5622 Recall: 0.5659 f1score_micro: 0.5659 f1score_macro: 0.5624\n",
+      "Epoch: 47/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0084 Acc: 0.5634 Precision: 0.5597 Recall: 0.5634 f1score_micro: 0.5634 f1score_macro: 0.5598\n",
+      "Epoch: 48/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0084 Acc: 0.5647 Precision: 0.5616 Recall: 0.5647 f1score_micro: 0.5647 f1score_macro: 0.5616\n",
+      "Epoch: 49/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0084 Acc: 0.5642 Precision: 0.5609 Recall: 0.5642 f1score_micro: 0.5642 f1score_macro: 0.5612\n",
+      "Epoch: 50/50\n",
+      "Begin test......\n",
+      "Test Loss: 0.0084 Acc: 0.5649 Precision: 0.5610 Recall: 0.5649 f1score_micro: 0.5649 f1score_macro: 0.5614\n"
      ]
     }
    ],
@@ -310,7 +379,7 @@
     "\n",
     "for epoch in range(NUM_EPOCHS):\n",
     "    model.train()\n",
-    "    torch.cuda.empty_cache()\n",
+    "    # torch.cuda.empty_cache()\n",
     "\n",
     "    ##########################\n",
     "    ### Training\n",
@@ -388,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +470,7 @@
    ],
    "source": [
     "df = pd.DataFrame({'acc': test_acc_l, 'precision': test_precision_l, 'recall': test_recall_l, 'f1score_micro': test_f1score_micro_l, 'f1score_macro': test_f1score_macro_l})\n",
-    "df.to_csv('./log/focal_2.csv', index=False)\n",
+    "df.to_csv('./log/focal_0.5.csv', index=False)\n",
     "print('log generated')"
    ]
   }
